http://bugzilla.zimbra.com/show_bug.cgi?id=4862 http://bugzilla.zimbra.com/show_bug.cgi?id=6433 http://bugzilla.zimbra.com/show_bug.cgi?id=6596 bug: 4862,6433,6596 - remove hiRes(in time will remove loRes by moving images up one level to simplify our images) - add ImageMerge support for disable images via .3 opacity modifier - remove all disabled images in favor of CSS method ** Some minor changes were needed where the Disable image name didn't match the enabled name (ie FlagRed v FlagDis)